Closed
Bug 47006
Opened 25 years ago
Closed 25 years ago
Disabled menu items seem to trigger on access key
Categories
(Core :: XUL, defect, P5)
Tracking
()
VERIFIED
FIXED
M18
People
(Reporter: bugzilla, Assigned: mikepinkerton)
Details
(Whiteboard: [nsbeta3+] Fix in hand)
Build ID: 2000073008
Steps to Reproduce:
(1) Open the Search menu in the browser.
(2) Press 'a', the accesskey for Search Addressbook (which should be disabled.
Result: a strange Search window opens. I'm not sure if this is a general
problem with disabled items and access keys, or if it's isolated to this
particular case.
Comment 2•25 years ago
|
||
I don't see any other cases, and this one seems to be pretty harmless. nsbeta3+,
P5 for M18. Would prioritize higher if something bad could happen.
Priority: P3 → P5
Whiteboard: [nsbeta3+]
Target Milestone: --- → M18
| Assignee | ||
Comment 3•25 years ago
|
||
got a fix, it's easy.
Whiteboard: [nsbeta3+] → [nsbeta3+] Fix in hand
| Assignee | ||
Comment 4•25 years ago
|
||
fixed.
| Reporter | ||
Comment 5•25 years ago
|
||
marking so
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 6•25 years ago
|
||
This menu seems to have changed with time and there is no disabled item(Search
Addressbook) in the Search menu anymore. However I verified this with other menu
items and it looks fixed. MArking Verified.(2000091208m18)
Status: RESOLVED → VERIFIED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•