access keys no longer execute the command when item is disabled (bug 47006)